# try-benches-expensive-rs

./: .pinact.yaml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  deny.toml  prek.toml
.github/workflows/: audit-check.yml  benchmark.yml  cargo-vet.yml  ci.yml  spelling.yml  zizmor.yml
crates/remove-query-string/: Cargo.toml
crates/remove-query-string/benches/: benchmark_by_cachegrind.rs  benchmark_by_callgrind.rs  benchmark_by_cycle.rs  benchmark_by_time.rs  factorial.rs
crates/remove-query-string/src/: lib.rs
supply-chain/: config.toml
