# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "3"
members = ["crates/remove-query-string"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/koyeung/try-rs-benches/"

[workspace.dependencies]
criterion = "0.7.0"
iai = "0.1.1"
iai-callgrind = "0.16.1"

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html#release
codegen-units = 1
lto = true
panic = "abort"
strip = "none"

[profile.bench]
# https://doc.rust-lang.org/cargo/reference/profiles.html#bench
codegen-units = 1
# debugging symbols are required for iai-callgrind
debug = true
incremental = false
inherits = "release"
lto = true
opt-level = 3
panic = "abort"
# don't strip, otherwise, unable to do iai-callgrind
strip = "none"

[profile.dev]
debug = 0
