[package]
name = "remove-query-string"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
iai.workspace = true
iai-callgrind = { workspace = true, features = ["client_requests"] }

[[bench]]
name = "benchmark_by_time"
harness = false

[[bench]]
name = "benchmark_by_cachegrind"
harness = false

[[bench]]
name = "benchmark_by_callgrind"
harness = false

[[bench]]
name = "factorial"
harness = false
